--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
-<h1>Sample App</h1>
-<p>
+<% provide(:title, 'Home') %>
+    <h1>Sample App</h1>
+    <p>
     This is the home page for the
-<a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+      <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    sample application.
+    </p>
