--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
 
 	<%= render 'layouts/header' %>
 		<div class="container">
-	<%= yield %>
+			<% flash.each do |key,value| %>
+				<div class="alert alert-<%= key %>"><%= value %> </div>
+			<% end %>
+			<%= yield %>
 	<%= render 'layouts/footer' %>
 	<%= debug(params) if Rails.env.development? %>
 	</div>
